# prog-distribuida-pucpr

./: main.py  pyproject.toml
TDE1_etcd/: A.py  C.py  pyproject.toml
conta_rest/: main.py  pyproject.toml
ex_capitais/: main.py  pyproject.toml
